<resources>
    <string name="app_name">"HealthData  "</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="promp_senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cadastre_se">Cadastre-se Aqui!</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
